--- a/2/fewrel2_nota.html
+++ b/2/fewrel2_nota.html
@@ -42,6 +42,7 @@
         <h1 style="font-weight:400;">Welcome to <i style="font-size:54px;font-weight:600;">FewRel</i></h1>
         <hr/ style="border-color:rgb(255,255,255);width:80px;border-width:3px;">
         <p class="lead" style="color:rgba(255,255,255,1.0)">a <i style="font-size:22px;font-weight:600;">Few</i>-shot <i style="font-size:22px;font-weight:600;">Rel</i>ation classification dataset</p>
+        <p class="lead" style="color:rgba(255,0,0,1.0)">We have now moved to <a style="color:rgba(255,0,0,1.0)" href="https://competitions.codalab.org/competitions/27982">[Codalab competition]</a>.</p>
         <br/>
         <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://www.aclweb.org/anthology/D19-1649.pdf" style="border-color:rgba(255,255,255,0.7);background-color:rgba(00,00,00,0.2)">Paper</a>
         <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://github.com/thunlp/FewRel" style="background-color:rgba(00,00,00,0.2);border-color:rgba(255,255,255,0.7);margin-left:20px;">GitHub</a>
@@ -105,19 +106,12 @@
 							</p>
 							
 
-							<p>
-							To evaluate your model, please sample a pair of input and standard output file from the validation set,
-							and compare your output with the standard one. The sampling scripts and evaluations scripts used in official evaluation are also accessible through the following work sheet.
-							</p>
-							<div style="text-align: center;">	
-								<a class="btn btn-primary btn-xl js-scroll-trigger" href="https://worksheets.codalab.org/worksheets/0xecafe23758774db4835ca82ba66da30a/" style="background-color:rgba(00,00,00,0.5);border-color:rgba(255,255,255,0.7);margin-left:20px;">Evaluation Tutorial</a>
-							</div>
 							<br/>
-							Once you have built a model that works to your expectations on the validation set, you can submit it to get official scores on the hidden test set. To preserve the integrity of test results, we do not release the test set to the public. Instead, we require you to submit your model so that we can run it on the test set for you. 
-							Instructions to submit your model is here!
+							Once you have built a model that works to your expectations on the validation set, you can submit it to get official scores on the hidden test set. To preserve the integrity of test results, we do not release the test set labels to the public. Instead, we require you to submit your predicted results so that we can evaluate it. You can submit to the automatic test benchmark:
 							<div style="text-align: center;">	
-								<a class="btn btn-primary btn-xl js-scroll-trigger" href="fewrel/codalab.html" style="background-color:rgba(00,00,00,0.5);border-color:rgba(255,255,255,0.7);margin-left:20px;">Submission Tutorial</a>
+								<a class="btn btn-primary btn-xl js-scroll-trigger" href="https://competitions.codalab.org/competitions/27982" style="background-color:rgba(00,00,00,0.5);border-color:rgba(255,255,255,0.7);margin-left:20px;">Submission</a>
 							</div>
+
 
 							</div>
 							</div>
