--- a/1/fewrel1.html
+++ b/1/fewrel1.html
@@ -110,7 +110,7 @@
 							<br/>
 							Once you have built a model that works to your expectations on the validation set, you can submit it to get official scores on the hidden test set. To preserve the integrity of test results, we do not release the test set labels to the public. Instead, we require you to submit your predicted results so that we can evaluate it. You can submit to the automatic test benchmark:
 							<div style="text-align: center;">	
-								<a class="btn btn-primary btn-xl js-scroll-trigger" href="https://competitions.codalab.org/competitions/27980" style="background-color:rgba(00,00,00,0.5);border-color:rgba(255,255,255,0.7);margin-left:20px;">Submission</a>
+								<a class="btn btn-primary btn-xl js-scroll-trigger" href="https://codalab.lisn.upsaclay.fr/competitions/7395" style="background-color:rgba(00,00,00,0.5);border-color:rgba(255,255,255,0.7);margin-left:20px;">Submission</a>
 							</div>
 
 							</div>
