--- a/2/fewrel2_nota.html
+++ b/2/fewrel2_nota.html
@@ -42,7 +42,7 @@
         <h1 style="font-weight:400;">Welcome to <i style="font-size:54px;font-weight:600;">FewRel</i></h1>
         <hr/ style="border-color:rgb(255,255,255);width:80px;border-width:3px;">
         <p class="lead" style="color:rgba(255,255,255,1.0)">a <i style="font-size:22px;font-weight:600;">Few</i>-shot <i style="font-size:22px;font-weight:600;">Rel</i>ation classification dataset</p>
-        <p class="lead" style="color:rgba(255,0,0,1.0)">We have now moved to <a style="color:rgba(255,0,0,1.0)" href="https://competitions.codalab.org/competitions/27982">[Codalab competition]</a>.</p>
+        <p class="lead" style="color:rgba(255,0,0,1.0)">We have now moved to <a style="color:rgba(255,0,0,1.0)" href="https://codalab.lisn.upsaclay.fr/competitions/7398">[Codalab competition]</a>.</p>
         <br/>
         <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://www.aclweb.org/anthology/D19-1649.pdf" style="border-color:rgba(255,255,255,0.7);background-color:rgba(00,00,00,0.2)">Paper</a>
         <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://github.com/thunlp/FewRel" style="background-color:rgba(00,00,00,0.2);border-color:rgba(255,255,255,0.7);margin-left:20px;">GitHub</a>
